k8s/queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../../kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: queue
  name: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: queue
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ../../kompose convert -f ../docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/micro-testing-default: "true"
        io.kompose.service: queue
    spec:
      containers:
        - image: j3remy/testing:queue
          name: queue
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
