k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../../kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 8003
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
