k8s/input-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../../kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: input-manager
  name: input-manager
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    io.kompose.service: input-manager
status:
  loadBalancer: {}
