k8s/output-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../../kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: output-manager
  name: output-manager
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8002
  selector:
    io.kompose.service: output-manager
status:
  loadBalancer: {}
