k8s/queue-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../../kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: queue
  name: queue
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: queue
status:
  loadBalancer: {}
