k8s/runner-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../../kompose convert -f ../docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: runner
  name: runner
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "8001"
      port: 8001
      targetPort: 8001
    - name: "8002"
      port: 8002
      targetPort: 8002
    - name: "8003"
      port: 8003
      targetPort: 8003
  selector:
    io.kompose.service: runner
status:
  loadBalancer: {}
