k8s/micro-testing-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: micro-testing-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/micro-testing-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/micro-testing-default: "true"
